# scrapper-zoom-com-br

./: README.md  pyproject.toml
src/: main.py
src/functions/: getProductInterestInfo.py  retrieveCashbackData.py  retrievePriceHistoryData.py  retrieveSellersData.py  sendInfoExternal.py
