[tool.poetry]
name = "scrap-zoom-com-br"
version = "0.1.0"
description = ""
authors = ["Matheus Albino <matheusalb3213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
